# ansible-portal-installer

./: .env.example  .env.template  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  SUMMARY.md  install.sh  pyproject.toml
ansible_portal_installer/: __init__.py  cli.py  config.py  k8s.py  oauth_setup.py  registry.py  validation.py
ansible_portal_installer/backends/: README.md  __init__.py  base.py
ansible_portal_installer/backends/helm/: __init__.py  client.py  deployer.py
ansible_portal_installer/commands/: __init__.py  build.py  collect_logs.py  deploy.py  teardown.py  upgrade.py  validate.py
logs/logs-20260502-232705/events/: namespace-events.txt
logs/logs-20260502-232705/helm/: status.txt  values.yaml
src/ansible_portal_installer/: __init__.py  cli.py  constants.py
src/ansible_portal_installer/actions/: __init__.py  build.py  deploy.py  health.py  logs.py  publish.py  teardown.py  templates.py  upgrade.py  verify.py
src/ansible_portal_installer/config/: settings.py  validation.py
src/ansible_portal_installer/core/: __init__.py  context.py  exceptions.py
src/ansible_portal_installer/installers/: __init__.py  base.py  helm.py  operator.py  rhel.py
src/ansible_portal_installer/ui/: __init__.py  console.py  progress.py  prompts.py
src/ansible_portal_installer/utils/: __init__.py  container.py  git.py  helm.py  openshift.py  shell.py
tests/: __init__.py  test_config.py
