[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-portal-installer"
version = "0.1.0"
description = "CLI tool for deploying Ansible Automation Portal to OpenShift"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ansible Portal Team"},
]
keywords = ["ansible", "openshift", "kubernetes", "backstage", "rhdh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "kubernetes>=28.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
ansible-portal-installer = "ansible_portal_installer.cli:cli"

[project.urls]
"Homepage" = "https://github.com/ansible/ansible-rhdh-plugins"
"Bug Tracker" = "https://github.com/ansible/ansible-rhdh-plugins/issues"
"Documentation" = "https://github.com/ansible/ansible-rhdh-plugins/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["ansible_portal_installer*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["kubernetes", "kubernetes.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ansible_portal_installer --cov-report=term-missing"
